#pragma once

class Animacion
{
private:
    /*data*/
public:
    Animacion(/* args */) {}
    ~Animacion() {}
    void AsignarNombre() {}
}
