#pragma once

class Asteroide
{
private:
    /*data*/
public:
    Asteroide(/* args */) {}
    ~Asteroide() {}
    void AsignarNombre() {}
}
