#pragma once

class Cohete
{
private:
    /*data*/
public:
    Cohete(/* args */) {}
    ~Cohete() {}
    void AsignarNombre() {}
}