#pragma once

class CoheteEnemigo
{
private:
    /*data*/
public:
    CoheteEnemigo(/* args */) {}
    ~CoheteEnemigo() {}
    void AsignarNombre() {}
}