#pragma once

class Controlador
{
private:
    /*data*/
public:
    Controlador(/* args */) {}
    ~Controlador() {}
    void AsignarNombre() {}
}