#pragma once

class Cordenada
{
private:
    /*data*/
public:
    Cordenada(/* args */) {}
    ~Cordenada() {}
    void AsignarNombre() {}
}