#pragma once

class Fin
{
private:
    /*data*/
public:
    Fin(/* args */) {}
    ~Fin() {}
    void AsignarNombre() {}
}