#pragma once

class Imagen
{
private:
    /*data*/
public:
    Imagen(/* args */) {}
    ~Imagen() {}
    void AsignarNombre() {}
}