#pragma once

class Muerte
{
private:
    /*data*/
public:
    Muerte(/* args */) {}
    ~Muerte() {}
    void AsignarNombre() {}
}