#pragma once

class Pantalla
{
private:
    /*data*/
public:
    Pantalla(/* args */) {}
    ~Pantalla() {}
    void AsignarNombre() {}
}