#pragma once

class Patron
{
private:
    /*data*/
public:
    Patron(/* args */) {}
    ~Patron() {}
    void AsignarNombre() {}
}