#pragma once

class Tiempo
{
private:
    /*data*/
public:
    Tiempo(/* args */) {}
    ~Tiempo() {}
    void AsignarNombre() {}
}